# pipeline

./: .gitignore  pyproject.toml
.github/workflows/: python-app.yml
src/: api.py  gui.py
tests/: test_api.py  test_ci-cd.py  test_gui.py
