[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest",
    "requests",
    "playwright",
    "pytest-playwright",
    "faker",
    "pytest-rerunfailures"
]

[tool.pytest.ini_options]
addopts = "-v -s"
testpaths = ["tests"]
pythonpath = ["src"]